--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/index.xhtml
@@ -117,7 +117,7 @@
                               <!-- <h1 class="userHeadingUobDash">#{uobdash.selAccountList.get(0).firstname} #{uobdash.selAccountList.get(0).lastname}</h1> -->
                               <h1 class="userHeadingUobDash" style="float: left; width: 95%;">
                                  <!--<span style="float: left;">Goal -</span>-->
-                                            <span id="idDbdGoalDesc" style="float: left;">
+                                            <span id="idDbdGoalDesc" class="edit_input" style="float: left;">
                                             <p:inputText value="#{uobdash.goalcstmnm}" id="inpDbGoal">
                                                <p:ajax listener="#{uobdash.onChngCsmVal}" event="blur" />
                                             </p:inputText>
