--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/strategy.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/strategy.xhtml
@@ -42,7 +42,7 @@
 		                    <p:commandButton id="uobCancelBtn"
 		                                     value="Cancel"
 		                                     styleClass="uob_button cancel_btn"
-		                                     actionListener="#{uobpb.exitPage}">
+		                                     actionListener="#{uobpb.goBack}">
 		                    </p:commandButton>
 		                    <p:commandButton id="uobContinueBtn"
 		                                     value="Continue"
