Committed by Sagar for UOB UI Changes

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/register.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/register.xhtml
@@ -29,7 +29,7 @@
                                     
                                     
                                     	<div class="styled-input wide-input">
-										      <p:inputText placeholder="Full Nmae" id="firstName" value="#{uobpb.firstname}" required="true" requiredMessage="Please enter Given Name.">
+										      <p:inputText placeholder="Full Nmae" id="firstName" value="#{uobpb.regfullname}" required="true" requiredMessage="Please enter Given Name.">
                                         </p:inputText>
 										      <label>Full Name</label>
 										      <span></span> 
