Committed by Sagar for  UOB UI Changes

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -43,10 +43,11 @@
                     <div class="container100 progressbarsag">
 
                         <div class="loadPgNm">
-                            <span class="done"> Goal </span>
-                            <span class="done"> Assets </span>
-                            <span class="done"> Liabilities </span>
+                            <span > Goal </span>
+                            <span > Assets </span>
+                            <span > Liabilities </span>
                             <span class="active"> Risk </span>
+                            <span > Confirmation </span>
                         </div>
 
 
