--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/userConfirmation.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/userConfirmation.xhtml
@@ -191,7 +191,7 @@
                             <ui:fragment rendered="true">
                                 <p:commandButton id="startBtnCnf" value="Start Over"
                                                styleClass="investNowBtn "
-                                               update=":ceForm:cnfgraphArea"
+                                               update=":ceForm:workArea"
                                                actionListener="#{uobpb.gotoStartOverPage}"/>
 
                             </ui:fragment>
