--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
@@ -12,6 +12,7 @@
             <span class="active"> Assets </span>
             <span> Liabilities </span>
             <span> Risk </span>
+            <span > Confirmation </span>
         </div>
 
 
